--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "electron-tutorial-app",
-  "productName": "Electron tutorial app",
-  "description": "Application for electron tutorials",
+  "name": "renderkit-project-browser",
+  "productName": "Intel&reg; Render Kit&trade; Browser",
+  "description": "Intel&reg; RenderKit&trade; Browser",
   "version": "1.0.0",
   "main": "main.js",
   "license": "MIT",
-  "author": "Christian Engvall",
+  "author": "Rudy ",
   "devDependencies": {
-    "electron": "^5.0.8",
+    "electron": "^5.0.13",
     "electron-installer-dmg": "^3.0.0",
     "electron-packager": "^12.2.0",
     "electron-rebuild": "^1.10.1",
+    "electron-tabs": "^0.15.0",
     "electron-winstaller": "^2.7.0",
     "node-gyp": "^6.1.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/crilleengvall/electron-tutorial-app.git"
+    "url": "https://github.com/rudycazabon/irtk-project-browser.git"
   },
   "scripts": {
     "start": "electron .",
+    "server": "http-server .",
     "package-mac": "electron-packager . --overwrite --asar --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds --darwinDarkModeSupport=true",
     "package-win": "electron-packager . electron-tutorial-app --overwrite --asar --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Electron Tutorial App\"",
     "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=../release-builds",
     "create-installer-mac": "electron-installer-dmg ./release-builds/Electron\\ tutorial\\ app-darwin-x64/Electron\\ tutorial\\ app.app electron-tutorial-app --out=release-builds --overwrite --icon=assets/icons/mac/icon.icns",
     "create-installer-win": "node installers/windows/createinstaller.js",
     "create-debian-installer": "electron-installer-debian --src ../release-builds/electron-tutorial-app-linux-x64/ --arch amd64 --config debian.json"
+  },
+  "dependencies": {
+    "http-server": "^0.12.1"
   }
 }
