--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron-rebuild": "^1.10.1",
     "electron-tabs": "^0.15.0",
     "electron-winstaller": "^2.7.0",
+    "grunt": "^1.1.0",
     "node-gyp": "^6.1.0"
   },
   "repository": {
