--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   "license": "MIT",
   "author": "Rudy ",
   "devDependencies": {
-    "electron": "^5.0.13",
+    "bindings": "^1.5.0",
+    "electron": "^8.3.0",
+    "electron-installer-debian": "^3.0.0",
     "electron-installer-dmg": "^3.0.0",
     "electron-packager": "^12.2.0",
-    "electron-rebuild": "^1.10.1",
+    "electron-rebuild": "^1.11.0",
     "electron-tabs": "^0.15.0",
     "electron-winstaller": "^2.7.0",
     "grunt": "^1.1.0",
+    "nan": "^2.14.1",
+    "node-addon-api": "^3.0.0",
     "node-gyp": "^6.1.0"
   },
   "repository": {
@@ -31,6 +35,7 @@
     "create-debian-installer": "electron-installer-debian --src ../release-builds/electron-tutorial-app-linux-x64/ --arch amd64 --config debian.json"
   },
   "dependencies": {
+    "electron": "^8.3.0",
     "http-server": "^0.12.1"
   }
 }
